<resources>
    <string name="app_name">Graduation</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_registration">registration</string>
    <string name="registerinfo">Create new user</string>
    <string name="repassword">Re-password</string>
    <string name="createuser">Create</string>
    <string name="success_create_user">Sucessfuly create user </string>
    <string name="sucess">success </string>
    <string name="error">Error </string>
    <string name="login_failed">Invalid username or password !! </string>
    <string name="title_activity_home">Home</string>
    <string name="list">list</string>
    <string name="submit">submit</string>
</resources>
